--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cosmic Tic Tac Toe | A Game From Another Dimension</title>
+    <title>Cosmic Tic Tac Toe </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="Experience Tic Tac Toe like never before with this cosmic, otherworldly game interface.">
   </head>
